--- a/client/index.html
+++ b/client/index.html
@@ -30,9 +30,7 @@
                 <div>
                     <h1>RPA <br>Quickscan Automatiseer je proces</h1>
                     <p class="my-1">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt atque, sapiente cumque, nihil
-                        deserunt at voluptatem qui accusamus dicta voluptatibus ab ipsam, iure maxime vero et vel. Cum,
-                        nemo fuga.
+                        Bekijk of het proces geschikt is om te automatiseren.
 
                     </p>
 
