--- a/client/question.html
+++ b/client/question.html
@@ -29,10 +29,10 @@
         <button type="button" id="next">></button><br>
 
         <div class="volgorde">
-        <button id="rij">1</button><button id="rij">2</button><button id="rij">3</button><button id="rij">4</button><button id="rij">5</button>
-        </div>    
+            <button id="rij1">1</button><button id="rij">2</button><button id="rij">3</button><button id="rij">4</button><button id="rij">5</button>
+        </div>
     </div>
-    
+
 </body>
 
 </html>
