--- a/client/question1.html
+++ b/client/question1.html
@@ -35,10 +35,9 @@
         <label for="age3">61 - 100</label><br><br>
         
         <button type="button" id="next">></button><br>
-
+<br>
         <div class="volgorde">
-            <button id="rij">1</button><button id="rij">2</button><button id="rij">3</button><button
-                id="rij">4</button><button id="rij">5</button>
+            <button id="rij">1</button><button id="rij">2</button><button id="rij">3</button><button id="rij">4</button><button id="rij">5</button>
         </div>
     </div>
 
