--- a/client/index.html
+++ b/client/index.html
@@ -37,10 +37,12 @@
                     <a class="button" href="start.html">Start Scan</a>
 
                 </div>
-                <img src="img/background.png" height="450px"/>
+                <img src="img/banner.png" />
             </div>
 
         </div>
+    </div>
+    <img src="img/swirl.png" id="swirl">
 </body>
 
 </html>
