email post via postman werkt en email post via site

--- a/client/start.html
+++ b/client/start.html
@@ -34,7 +34,7 @@
                     <input id="email" type="text" placeholder="E-mail"></input><br>
 
                     <a id="voorwaarden" href="">Algemene Voorwaarden</a><br>
-                    <a href="question.html" id="start-scan">Start Scan</a><br>
+                    <button id="start-scan">Start Scan</button><br>
                 </div>
                 <!-- <img src="img/background.png" height="450px" /> -->
             </div>
