back end email gefixt

--- a/client copy/start.html
+++ b/client copy/start.html
@@ -34,7 +34,7 @@
                     <input id="email" type="text" placeholder="E-mail"></input><br>
 
                     <a id="voorwaarden"href="">Algemene Voorwaarden</a><br>
-                    <a href="question.html" id="start-scan">Start Scan</a><br>
+                    <a  id="start-scan">Start Scan</a><br>
                     
                  
                 </div>
@@ -43,5 +43,5 @@
 
         </div>
 </body>
-
+<script src="main.js"></script>
 </html>
