--- a/client/home.html
+++ b/client/home.html
@@ -36,7 +36,7 @@
 
                             </p>
 
-                            <a class="button" href="start.html">Start Scan</a>
+                            <!-- <a class="button" href="start.html">Start Scan</a> -->
                             <button id="button-start" class="button-start">Start Scan</button>
                         </div>
                         <img src="img/banner.png" />
@@ -72,12 +72,12 @@
 
                     <div class="question_title"></div>
                     <!-- <input id="antwoord" type="text" placeholder="antwoord"></input><br> -->
-
-                    <div id="choice1"></div>
-                    <div id="choice2"></div>
-                    <div id="choice3"></div>
-                    <div id="choice4"></div>
-
+                    <div class="choices">
+                        <div id="choice1"></div>
+                        <div id="choice2"></div>
+                        <div id="choice3"></div>
+                        <div id="choice4"></div>
+                    </div>
                     <!-- <button  -->
                     <button class="button-start" id="next_btn">></button><br>
                     <br>
@@ -87,7 +87,7 @@
             <div class="page" id="page-result">
                 <button class="button-start" id="questions-button">></button><br>
 
-                </div>
+            </div>
 
     </main>
 
