--- a/client/home.html
+++ b/client/home.html
@@ -67,8 +67,8 @@
                 </div>
             </div>
 
-            <div class="container-question" id="questions">
-                <div class="page" id="page-questions">
+            <div class="page" id="page-questions">
+                <div class="container-question" id="questions">
 
                     <div class="question_title"></div>
                     <!-- <input id="antwoord" type="text" placeholder="antwoord"></input><br> -->
@@ -88,7 +88,7 @@
                 <button class="button-start" id="questions-button">></button><br>
 
             </div>
-
+            </div>
     </main>
 
 
