--- a/client/eindscherm.html
+++ b/client/eindscherm.html
@@ -35,33 +35,11 @@
   <main class="container">
     <div id="game" class="justify-center flex-column">
       <!-- Dummy example -->
-      <h2 id="question">What is the answer to this questions?</h2>
-      <div class="answers">
-      <div id="antwoord-1" style="display:none">
-      <div class="choice-container">
-        <p class="choice-prefix">A</p>
-        <p id="choice1" class="choice-text">Choice 1</p>
-        </div>
-      </div>
-      <div id="antwoord-2" style="display:none">
-      <div class="choice-container">
-        <p class="choice-prefix">B</p>
-        <p id="choice2"class="choice-text">Choice 2</p>
-        </div>
-      </div>
-      <div id="antwoord-3" style="display:none">
-      <div class="choice-container">
-        <p class="choice-prefix">C</p>
-        <p id="choice3" class="choice-text">Choice 3</p>
-        </div>
-      </div>
-      <div id="antwoord-4" style="display:none">
-      <div class="choice-container">
-        <p class="choice-prefix">D</p>
-        <p id="choice4" class="choice-text">Choice 4</p>
-        </div>
-      </div>
-    </div>
+      <h2 id="eindtext">Bedankt voor het invullen</h2>
+      
+      <p class="eindtext-msg">Check uw e-mail voor de resultaten</p>
+      <a id="start-scan" class="button" href="index.html">Terug naar Homepage</a>
+
 </div>
             <!-- <img src="img/swirl.png" id="swirl"> -->
   </main>
