--- a/client/eindscherm.html
+++ b/client/eindscherm.html
@@ -38,7 +38,7 @@
       <h2 id="eindtext">Bedankt voor het invullen</h2>
       
       <p class="eindtext-msg">Check uw e-mail voor de resultaten</p>
-      <a id="start-scan" class="button" href="index.html">Terug naar Homepage</a>
+      <button class="terug-button"><a class="white" href="index.html">Terug naar Homepage</a></button>
 
 </div>
             <!-- <img src="img/swirl.png" id="swirl"> -->
