--- a/client/quickscan.html
+++ b/client/quickscan.html
@@ -20,13 +20,13 @@
 </head>
 <header>
     <div href="index.html" class="logo">
-        <img src="img/rsz_rsz_logo.png" width=""></img>
+        <a href="index.html"><img src="img/rsz_rsz_logo.png" width=""></img></a>
     </div>
     <nav class="nav">
         <ul class="nav_list">
-            <li class="nav_item"><a href="testimonials.html" class="nav_link">Login</a></li>
-            <!-- <li class="nav_item"><a href="testimonials.html" class="nav_link">Testimonials</a></li> -->
-            <!-- <li class="nav_item"><a href="testimonials.html" class="nav_link">Testimonials</a></li> -->
+            <li class="nav_item"><a href="#" class="nav_link">Login</a></li>
+            <!-- <li class="nav_item"><a href="#" class="nav_link">Testimonials</a></li> -->
+            <!-- <li class="nav_item"><a href="#" class="nav_link">Testimonials</a></li> -->
         </ul>
 
     </nav>
@@ -62,11 +62,15 @@
         </div>
       </div>
     </div>
+    <div class="button-line">
+    <button id="back-button"><</button>
+    <button id="front-button">></button>
+  </div>
 </div>
             <!-- <img src="img/swirl.png" id="swirl"> -->
   </main>
   <img src="img/swirl.png" id="swirl">
-  <script src="js/quickscan.js"></script>
+  <script src="js/quickscan2.js"></script>
 </body>
 
 </html>
