--- a/client/index.html
+++ b/client/index.html
@@ -17,9 +17,9 @@
         </div>
         <nav class="nav">
             <ul class="nav_list">
-                <li class="nav_item"><a href="testimonials.html" class="nav_link">Login</a></li>
-                <!-- <li class="nav_item"><a href="testimonials.html" class="nav_link">Testimonials</a></li> -->
-                <!-- <li class="nav_item"><a href="testimonials.html" class="nav_link">Testimonials</a></li> -->
+                <li class="nav_item"><a href="#" class="nav_link">Login</a></li>
+                <!-- <li class="nav_item"><a href="#" class="nav_link">Testimonials</a></li> -->
+                <!-- <li class="nav_item"><a href="#" class="nav_link">Testimonials</a></li> -->
             </ul>
 
         </nav>
