email wordt nu in de cookies gezet met een delay

--- a/client/index.html
+++ b/client/index.html
@@ -45,5 +45,6 @@
     <img src="img/swirl.png" id="swirl">
 </body>
 <script src="js/script.js"></script>
+<script src="main.js"></script>
 
 </html>
