--- a/client/quickscan.html
+++ b/client/quickscan.html
@@ -71,6 +71,7 @@
   </main>
   <img src="img/swirl.png" id="swirl">
   <script src="js/quickscan2.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
