--- a/client/start.html
+++ b/client/start.html
@@ -35,7 +35,7 @@
 
                     <a id="voorwaarden" href="">Algemene Voorwaarden</a><br>
                     <!-- <button id="start-scan">Start Scan</button><br> -->
-                    <a id="start-scan" class="button" href="quickscan.html">Start Scan</a>
+                    <a id="start-scan" class="button">Start Scan</a>
 
                 </div>
                 <!-- <img src="img/background.png" height="450px" /> -->
