start input color en style

--- a/client/start.html
+++ b/client/start.html
@@ -31,8 +31,8 @@
                     <!-- <h1>RPA <br>Quickscan Automatiseer je proces</h1> -->
                    
                     <h1>Voer uw e-mailadres in om <br>feedback te ontvangen</h1>
-                    <input id="email" type="text" placeholder="E-mail"></input><br>
-
+                    <!-- <input id="email" type="text" placeholder="E-mail"></input><br> -->
+                    <input id="email" class="email" type="text" class="form-control" name="email" placeholder="Voorbeeld@email.com"  /><br>
                     <a id="voorwaarden" href="">Algemene Voorwaarden</a><br>
                     <!-- <button id="start-scan">Start Scan</button><br> -->
                     <a id="start-scan" class="button">Start Scan</a>
