frontend en backend

--- a/client/summary.html
+++ b/client/summary.html
@@ -26,29 +26,62 @@
     <div class="summary-section">
         <h4>Vraag & Antwoord</h4>
         <p id="qcounter">Vraag 1:</p>
-        <p id="question">Dummy text</p>
+        <p id="question1">Dummy text</p>
         <!-- <h3>....</h3> -->
         <!-- <div class="together"> -->
             <div class="answer-container">
-              <p id="chosen-answers">Antwoord:</p>
+              <p id="chosen-answers1">Antwoord:</p>
               <p id="change-pw"><a id="pw-link" href=""><i class="fa fa-pencil" style="font-size:18px"></i> Wijzig Antwoord</a></p>
             </div>
           <!-- </div> -->
         <hr>
         <h4>Vraag & Antwoord</h4>
         <p id="qcounter">Vraag 2:</p>
-        <p id="question">Dummy text</p>
+        <p id="question2">Dummy text</p>
         <!-- <h3>....</h3> -->
         <!-- <div class="together"> -->
             <div class="answer-container">
-              <p id="chosen-answers">Antwoord:</p>
+              <p id="chosen-answers2">Antwoord:</p>
               <p id="change-pw"> <a id="pw-link" href=""> <i class="fa fa-pencil" style="font-size:18px"></i> Wijzig Antwoord</a></p>
+            </div>
+          <!-- </div> -->
+        <hr>
+        <h4>Vraag & Antwoord</h4>
+        <p id="qcounter">Vraag 3:</p>
+        <p id="question3">Dummy text</p>
+        <!-- <h3>....</h3> -->
+        <!-- <div class="together"> -->
+            <div class="answer-container">
+              <p id="chosen-answers3">Antwoord:</p>
+              <p id="change-pw"><a id="pw-link" href=""><i class="fa fa-pencil" style="font-size:18px"></i> Wijzig Antwoord</a></p>
+            </div>
+          <!-- </div> -->
+        <hr>
+        <h4>Vraag & Antwoord</h4>
+        <p id="qcounter">Vraag 4:</p>
+        <p id="question4">Dummy text</p>
+        <!-- <h3>....</h3> -->
+        <!-- <div class="together"> -->
+            <div class="answer-container">
+              <p id="chosen-answers4">Antwoord:</p>
+              <p id="change-pw"> <a id="pw-link" href=""> <i class="fa fa-pencil" style="font-size:18px"></i> Wijzig Antwoord</a></p>
+            </div>
+          <!-- </div> -->
+        <hr>
+        <h4>Vraag & Antwoord</h4>
+        <p id="qcounter">Vraag 5:</p>
+        <p id="question5">Dummy text</p>
+        <!-- <h3>....</h3> -->
+        <!-- <div class="together"> -->
+            <div class="answer-container">
+              <p id="chosen-answers5">Antwoord:</p>
+              <p id="change-pw"><a id="pw-link" href=""><i class="fa fa-pencil" style="font-size:18px"></i> Wijzig Antwoord</a></p>
             </div>
           <!-- </div> -->
         <hr>
     </div>
 </body>
-<script src="js/quickscan2.js"></script>
+<script src="js/quickscanbewerk.js"></script>
 <script src="main.js"></script>
 
 </html>
