--- a/client/summary.html
+++ b/client/summary.html
@@ -79,6 +79,7 @@
             </div>
           <!-- </div> -->
         <hr>
+        <button id="button-summary">Submit</button>
     </div>
 </body>
 <script src="js/quickscanbewerk.js"></script>
