--- a/client/summary.html
+++ b/client/summary.html
@@ -25,6 +25,7 @@
     </header>
     <div class="summary-section">
         <h4>Vraag & Antwoord</h4>
+        <p class="Qvuser">Quickscan van: <span class="Quser" id="Quser"></span></p>
         <p id="qcounter">Vraag 1:</p>
         <p id="question1">Dummy text</p>
         <!-- <h3>....</h3> -->
