--- a/client/quickscan.html
+++ b/client/quickscan.html
@@ -34,6 +34,7 @@
 <body>
   <main class="container">
     <div id="game" class="justify-center flex-column">
+      <p class="Quser" id="Quser"></p>
       <!-- Dummy example -->
       <h2 id="question">What is the answer to this questions?</h2>
       <div class="answers">
