scan in database moet nog met quickscan.js linken

--- a/client/summary.html
+++ b/client/summary.html
@@ -31,7 +31,13 @@
         <!-- <h3>....</h3> -->
         <!-- <div class="together"> -->
             <div class="answer-container">
-              <p id="chosen-answers1">Antwoord:</p>
+              <!-- <p id="chosen-answers1">Antwoord:</p> -->
+              <select >
+                <option id="chosen-answers1"></option>
+                <option id="anwer-option1-1">test </option>
+                <option id="anwer-option1-2"> testimonials</option>
+                <option id="anwer-option1-3">eter </option>  
+              </select>
               <p id="change-pw"><a id="pw-link" href=""><i class="fa fa-pencil" style="font-size:18px"></i> Wijzig Antwoord</a></p>
             </div>
           <!-- </div> -->
